--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -6,7 +6,8 @@
 
     <name>Felix SCR Annotation Processor</name>
     <description>
-        [ALPHA] The compiler plugin will look in the dependency graph of the module (which will be currently compiled) if class
+        [ALPHA] The compiler plugin will look in the dependency graph of the module (which will be currently compiled)
+        if class
         "org.apache.felix.scr.annotations.Component"
         is available. In case the class is available the plugin assumes that Felix SCR annotations are in use. The
         service component xml will be created and added to
@@ -39,7 +40,44 @@
     <extensions defaultExtensionNs="com.intellij">
         <compiler implementation="net.chilicat.felixscr.intellij.build.ScrCompiler"/>
         <projectConfigurable instance="net.chilicat.felixscr.intellij.ScrConfigurable"/>
-        <projectService serviceImplementation="net.chilicat.felixscr.intellij.ScrSettings"/>
+        <projectService serviceImplementation="net.chilicat.felixscr.intellij.settings.ScrSettings"/>
+
+        <localInspection language="JAVA"
+                         shortName="ReferenceLookupBindDeclaration"
+                         displayName="Reference - Lookup obsolete Bind Declaration"
+                         groupName="Felix SCR Annotations"
+                         enabledByDefault="true" level="WARNING"
+                         implementationClass="net.chilicat.felixscr.intellij.inspection.ReferenceLookupBindDeclaration"/>
+
+        <localInspection language="JAVA"
+                         shortName="ReferenceInterfaceMissingInClass"
+                         displayName="Reference - Interface Is Missing"
+                         groupName="Felix SCR Annotations"
+                         enabledByDefault="true" level="WARNING"
+                         implementationClass="net.chilicat.felixscr.intellij.inspection.ReferenceInterfaceMissingInClass"/>
+
+        <localInspection language="JAVA"
+                         shortName="ReferenceNameMissingInClass"
+                         displayName="Reference - Name Is Missing"
+                         groupName="Felix SCR Annotations"
+                         enabledByDefault="true" level="WARNING"
+                         implementationClass="net.chilicat.felixscr.intellij.inspection.ReferenceNameMissingInClass"/>
+
+        <localInspection language="JAVA"
+                         shortName="ReferenceMissingBindDeclaration"
+                         displayName="Reference - Missing Bind/Unbind declaration"
+                         groupName="Felix SCR Annotations"
+                         enabledByDefault="true" level="WARNING"
+                         implementationClass="net.chilicat.felixscr.intellij.inspection.ReferenceMissingBindDeclaration"/>
+
+        <localInspection language="JAVA"
+                         shortName="ReferenceMissingMethod"
+                         displayName="Reference - Missing Method"
+                         groupName="Felix SCR Annotations"
+                         enabledByDefault="true" level="WARNING"
+                         implementationClass="net.chilicat.felixscr.intellij.inspection.ReferenceMissingMethod"/>
+
+
     </extensions>
 
 </idea-plugin>
