--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -120,7 +120,7 @@
     <extensions defaultExtensionNs="com.intellij">
         <compiler implementation="net.chilicat.felixscr.intellij.build.ScrCompiler"/>
         <projectConfigurable instance="net.chilicat.felixscr.intellij.settings.ui.ScrConfigurable"/>
-        <projectService serviceImplementation="net.chilicat.felixscr.intellij.settings.ScrSettings"/>
+        <projectService serviceImplementation="net.chilicat.felixscr.intellij.settings.ScrSettingsImpl"/>
 
         <localInspection
                 language="JAVA"
@@ -174,6 +174,9 @@
 
         <psi.referenceContributor language="JAVA"
                                   implementation="net.chilicat.felixscr.intellij.references.ScrReferenceProvidersRegistry"/>
+
+
+        <compileServer.plugin classpath="felix-jps-plugin.jar;felix-scr-common.jar"/>
 
     </extensions>
 
