--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -4,7 +4,7 @@
 
     <idea-version since-build="123.155"/>
 
-    <version>1.1</version>
+    <version>1.2</version>
 
     <name>Felix SCR Annotation Processor</name>
     <description>
@@ -46,6 +46,12 @@
 
     <change-notes>
         <![CDATA[
+            <p>
+                <strong>Version 1.2</strong>
+                <ul>
+                     <li>Supports External build functionality. The external build also solves JDK 7 issues on Mac OSX</li>
+                </ul>
+            </p>
             <p>
                 <strong>Version 1.1</strong>
 
