--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -4,7 +4,7 @@
 
     <idea-version since-build="123.155"/>
 
-    <version>1.2</version>
+    <version>1.4</version>
 
     <name>Felix SCR Annotation Processor</name>
     <description>
@@ -47,7 +47,14 @@
     <change-notes>
         <![CDATA[
             <p>
-                <strong>Version 1.2.1</strong>
+                <strong>Version 1.4</strong>
+                <ul>
+                     <li>Skip test source and dependencies for SCR generation.</li>
+                     <li>Add new debug logging options to settings page.</li>
+                </ul>
+            </p>
+            <p>
+                <strong>Version 1.3</strong>
                 <ul>
                      <li>Supports External build functionality. The external build also solves JDK 7 issues on Mac OSX</li>
                      <li>Bugfix: Do not delete existing component files.</li>
