--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -4,7 +4,7 @@
 
     <idea-version since-build="123.155"/>
 
-    <version>1.4</version>
+    <version>1.5</version>
 
     <name>Felix SCR Annotation Processor</name>
     <description>
@@ -46,6 +46,13 @@
 
     <change-notes>
         <![CDATA[
+            <p>
+                <strong>Version 1.5</strong>
+                <ul>
+                     <li>Removed manifest policy feature. Service component header will always be overwritten</li>
+                     <li>Removed source scan feature.</li>
+                </ul>
+            </p>
             <p>
                 <strong>Version 1.4</strong>
                 <ul>
