--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ configurations {
 }
 
 dependencies {
-    scrAntLib group: "org.apache.felix", name: "org.apache.felix.scr.generator", version: "1.8.1-SNAPSHOT", changing: true
-    //scrAntLib 'org.apache.felix:org.apache.felix.scr.generator:1.8.0'
+    //scrAntLib group: "org.apache.felix", name: "org.apache.felix.scr.generator", version: "1.8.1-SNAPSHOT", changing: true
+    scrAntLib 'org.apache.felix:org.apache.felix.scr.generator:1.8.2'
     scrAntLib 'org.osgi:org.osgi.compendium:4.3.1'
 
     //compile project('felix-scr-common')
